--- a/Festivaly/app/src/main/AndroidManifest.xml
+++ b/Festivaly/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.festivaly">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".ActividadPrincipal"
+            android:label="@string/title_activity_actividad_principal"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ActividadRegistroLogin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
